<resources>
    <string name="app_name">ZulipClient</string>
    <string name="avatar">Аватар</string>
    <string name="set_name">Установить имя</string>
    <string name="set_message">Установить сообщение</string>
    <string name="message">Сообщение</string>
    <string name="username">Имя пользователя</string>
    <string name="set_avatar">Установить аватар</string>
    <string name="write_and_ellipsis">Написать…</string>
    <string name="sent">Отправить</string>
    <string name="add_reaction">Добавить реакцию</string>
    <string name="subscribed">Subscribed</string>
    <string name="all_streams">All streams</string>
    <string name="search_and_ellipsis">Search…</string>
    <string name="users_and_ellipsis">Users…</string>
    <string name="search">Search</string>
    <string name="arrow">Arrow</string>
    <string name="streams">Streams</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="online_status">Online status</string>
    <string name="log_out">Log out</string>
    <string name="users">Users</string>
    <string name="data_upload_error">Data upload error!</string>
    <string name="hash_stream_name">#%s</string>
    <string name="topic_colon_hash_name">Topic: #%s</string>
    <string name="count_mes">%d mes</string>
    <string name="refresh">Refresh</string>
    <string name="active">active</string>
    <string name="idle">idle</string>
    <string name="offline">offline</string>
    <string name="unknown">unknown</string>
    <string name="an_error_occurred_when_adding_the_reaction">Ошибка при добавлении реакции!</string>
    <string name="an_error_occurred_when_deleting_the_reaction">Ошибка при удалении реакции!</string>
    <string name="error_sending_the_message">Ошибка при отправке сообщения!</string>
    <string name="retry">Retry</string>
    <string name="error_loading_messages">Error loading messages!</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="subscribe">Подписаться</string>
    <string name="input_stream_name">Введите название стрима:</string>
    <string name="stream_name">Название стрима</string>
    <string name="create">Создать</string>
    <string name="cancel">Отмена</string>
    <string name="stream_name_cannot_be_blank">Имя стрима не должно быть пустым!</string>
    <string name="stream_creation_error">Ошибка при создании стрима!</string>
    <string name="stream_already_exist">Такой стрим уже создан!</string>
    <string name="create_new_stream">Создать новый стрим</string>
    <string name="error_stream_subscribing">Ошибка при попытке подписаться на стрим!</string>
    <string name="error_stream_unsubscribing">Ошибка при попытке отдписаться от стрима!</string>
    <string name="stream_options">Опции стримов</string>
    <string name="hash">#</string>
    <string name="copy_message">Скопировать сообщение</string>
    <string name="error_menu_opening">Ошибка при открытие меню!</string>
</resources>