<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.tabs.streams.StreamsFragment">

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurfaceVariant"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/Widget.App.SearchFieldStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/common_big_margin"
            android:layout_marginEnd="@dimen/common_small_margin"
            android:layout_weight="1"
            android:hint="@string/search_and_ellipsis"
            android:importantForAutofill="no"
            android:paddingHorizontal="28dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/search"
            android:src="@drawable/search_ic" />

        <ImageButton
            android:id="@+id/buttonOptions"
            style="@style/Widget.App.IconButton"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/common_small_margin"
            android:layout_marginEnd="@dimen/common_normal_margin"
            android:contentDescription="@string/stream_options"
            android:src="@drawable/more_vert_ic" />

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/common_normal_padding">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subscribed" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_streams" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerStreamTabs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>