<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/colorSurface"
    android:paddingHorizontal="@dimen/common_big_padding"
    android:paddingVertical="@dimen/common_normal_padding"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/textInputStreamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_stream_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hash"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="@id/editTextStreamName"
        app:layout_constraintEnd_toStartOf="@id/editTextStreamName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextStreamName" />

    <EditText
        android:id="@+id/editTextStreamName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_small_margin"
        android:backgroundTint="@color/common_main_text_color"
        android:hint="@string/stream_name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/common_main_text_color"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textHash"
        app:layout_constraintTop_toBottomOf="@id/textInputStreamName" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_normal_margin"
        android:text="@string/create"
        style="@style/Widget.App.Button.ButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextStreamName" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_normal_margin"
        android:text="@string/cancel"
        style="@style/Widget.App.Button.ButtonText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextStreamName" />


</androidx.constraintlayout.widget.ConstraintLayout>